2011-12-17  Antonello Provenzano  <antonello@deveel.com>
	* IQueryContext.cs: 
		- Method GetTable to obtain a reference to a table 
		in the database context.
		- Method GetUserGrants to obtain user privileges
		on a database object

2011-12-15  Antonello Provenzano  <antonello@deveel.com>
	* IQueryContext.cs: Added the method RemoveVariable to
	explicitly remove a variable from the given context.

2011-12-11  Antonello Provenzano  <antonello@deveel.com>
	* TableDataConglomerate.cs: added in-memory store for
	handling temporary tables

2011-12-10  Antonello Provenzano  <antonello@deveel.com>
	* DataTableInfo.cs: columns now cannot be added directly anymore:
	the only way is to provide name and type.
	* GTDataSource.cs: 
		- made public (for future external plugins architecture)
		- removed inheritance from IMutableTableDataSource
		(now inherits from ITableDataSource)
	* SimpleTransaction.cs: added method GetMutableTable to
	enforce the contract from IMutableTableSource

2011-12-09  Antonello Provenzano  <antonello@deveel.com>
	* TableDataConglomerate.cs:
		- conglomerate name (states) is now set at constructor
		(since there's a 1:1 relationship between a Database
		and a TableDataConglomerate, we assign this one the
		name of the database)
		- Exists method now without the specification of the
		name of the conglomerate
	* ViewDef.cs: renamed to View
	* DataTableDef.cs: renamed to DataTableInfo
	* DataTableColumnDef.cs: renamed to DataTableColumnInfo
	* TType.cs: 
		- introduced abstract property DbType
		- added methods for fast binary serialization/deserialization
	* DataTableColumnInfo.cs:
		- removed specific components of the type (eg. size, scale,
		locale, etc.): now the column type is set through TType

2011-12-07  Antonello Provenzano  <antonello@deveel.com>
	* MasterTableDataSource.cs:
		- Split up into multiple partial classes for better
		manageability and readability
		- Refactoring of the class to be implemented externally
		from the kernel
